#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([Planet of the Vicious Creatures Data],
	[1.06],
	[jorge.giner@hotmail.com],
	planetvc-data,
	[http://jorgicor.sdfeu.org/planetvc])

AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror -Wportability gnu])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
